--- a/BIN1/web_api/index.html
+++ b/BIN1/web_api/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="./structure.js"></script>
+    <script defer src="./main.js" type="module"></script>
   </head>
   <body>
     <div id="root"></div>
