--- a/BIN2/web_api/index.html
+++ b/BIN2/web_api/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./structure.js" defer></script>
+    <script src="./main.js" defer type="module"></script>
   </head>
   <body>
     <div id="root"></div>
